init effparam branchw

--- a/expe.tex
+++ b/expe.tex
@@ -52,7 +52,7 @@ We used the electrooptic sampling mentioned in the previous chapter: The electri
 \paragraph{Signal processing and acquisition}%{{{
 To reduce the noise, synchronous detection with the \textit{Stanford SRS360} lock-in amplifier was used and the polarity of THz waveforms was modulated by the voltage at the TeraSED emitter. The difference signal at the two photodiodes, PD1 and PD2, was first fed to an analogue filter (with center frequency 91.3 kHz and 3 dB drop at $\pm$ 7 kHz), sampled by the lock-in amplifier and digitally normalized against the signal measured by the auxiliary photodiode PD3. The normalisation was necessary due to the fact that the difference signal is proportional not only to the terahertz field, but also to the laser intensity which may fluctuate over time. 
 
-The time constant of the lock-in acquisition was comparable to the time which was needed by the delay lines to introduce a picosecond delay. As a result, the speed of delay lines movement suppressed the high-frequency components of the detected signal. Precise control of the delay line speed and timing, along with software compensation for this, was needed.
+The time constant of the lock-in acquisition was comparable to the time which was needed by the delay lines to introduce a picosecond delay. As a result, the speed of delay lines movement suppressed the high-frequency components of the detected signal. Attention must be paid at precise control of the delay line speed and software compensation of the artifacts.
 
 The spectral response of both the emitter and electrooptic sampling substantially influenced the measured spectra. Moreover, the phase of the recorded waves was modulated too, as a beam passing through a focus acquires additional phase due to the Gouy shift. Every transmission measurement was therefore normalized in frequency domain against a corresponding free-space reference, so that both the amplitude and phase artifacts cancelled out. 
 %}}}
@@ -60,7 +60,7 @@ The spectral response of both the emitter and electrooptic sampling substantiall
 With addition or rearrangement of optics, it would be theoretically possible to measure the \textit{reflectance spectrum} using TDTS in a similar way the transmission spectrum was measured. However, due to the complexity of such a setup and sensitivity to sample displacement, we did not use a second sampling branch for reflected signal. Instead of using two sampling schemes, it is possible to recover the amplitude and phase reflectance of a sample by stacking it between a pair of thick (3 and 6 mm) sapphire slabs \cite{nemec2012resonant}. Thanks to the relatively high refractive index of sapphire ($N \approx$ 3.068), these slabs introduce several distinct  echoes into the transmission signal.
 %\begin{figure} \caption{A broadband pulse passes through a single layer of microspheres randomly arranged between two sapphire slabs and is sampled by electrooptical detection.}  \centering \includegraphics[width=12cm]{img/expe/sample_sapphires.pdf} \end{figure}			%% TODO no use for this figure?
 
-If the beam divergence is neglected, each optical element can be characterised by its complex transfer function in the resulting spectrum. One needs to define three complex transmission functions: for the beam passing through the volume of the thin sapphire $A(f)$, of the thick sapphire $B(f)$ and through the thin sample $t(f)$. Additionally two reflectance functions for the beam reflected on sapphire-air interface $r_{A}(f)$ and on the sapphire-sample interface $r_S(f)$
+If the beam divergence is neglected, each optical element can be characterised by its complex transfer function in the resulting spectrum. One needs to define three complex transmission functions: for the beam passing through the volume of the thin sapphire $A(f)$, of the thick sapphire $B(f)$ and through the thin sample $t(f)$. Additionally two reflectance functions for the beam reflected on sapphire-air interface $r_{A}(f)$ and on the sapphire-sample interface $r_S(f)$.
 Measuring the references of the thin and thick sapphires separately, the spectra of $A(f)$ and $B(f)$ as well as $r_{A}(f)$ can be established \cite{nemec2012resonant}. 
 
 %defines the temporal separation between the main pulse and the first echo.  The reflectance and transmittance of the sample can be simply reconstructed using numerical deconvolution. The results of this method were, unfortunately, less than ideal. Among the reasons may be the possible asymmetry of the studied layer between the slabs, beam divergence and very low signal of both transmittance and particularly reflectance in the stop-bands of the sample.
@@ -80,8 +80,6 @@ from the numerically predicted results, which were moreover sensitive to subtle 
 %}}}
 
 \section{Fabrication of the titanium dioxide microspheres}
-% todo having discussed the measurement, we proceed to the fabrication of samples
-%The samples dielectric microspheres were manufactured by one of the collaborating groups.
 \paragraph{Preparation of dielectric sphere samples by the spray-dry process}%{{{
 The collaboration with the laboratory of Dr. Patrick Mounaix in France %% Todo reference to Patrick's group somehow, and mention Oleg Mitrofanow (here, or later)
 provided us with high-permittivity TiO$_{2}$ spheres with the sizes from 30 to 100 $\upmu$m, which were examined by the terahertz spectroscopy as dielectric resonators, and possible constituents of a metamaterial with a negative effective permeability.
