revision of expe

--- a/result.tex
+++ b/result.tex
@@ -301,6 +301,7 @@ simple, double-split, co-axial and spiral SRRs
 
 %====================================================================================================
 \section{Dielectric sphere} % references to ->				%{{{
+%% TODO back reference to expe.tex:74
 
 %\ref{fg_Spheres_lossscan}
 
@@ -692,6 +693,7 @@ Standing SPP wave
 \section{Fishnet -- metallic sheet with holes} \label{section_fishnet} % references to ->
 %Aperture-array transmission
 %Wood anomaly in slit arrays
+%% TODO asymmetric cladding --> back reference to expe.tex:79
 
 %Babinet principle
 % for nearly flat structures, where most of the fields are confined within a slab perpendicular to $\KK$, a
