rm old imgs of cdh_srrwire

--- a/expe.tex
+++ b/expe.tex
@@ -126,8 +126,8 @@ The resonance frequency of a dielectric resonator depends on all three half-axes
 \begin{figure}[ht] \caption{Application of the effect from Fig. \ref{fg_sieve_pass_notpass} for separating a narrow fraction of ellipsoids between the sieves. Both combinations of \textbf{(a)} square-rectangular and \textbf{(b)} circular-elliptic sieves can be used, with the latter one promising better selectivity also in terms of the particle aspect ratio.} \label{fg_double_sieving} \centering 
 \includegraphics[width=\textwidth]{img/technology/sieve_double_sieving_fractions.pdf}
 \end{figure}
-It shall be noted that although we plotted a binary (\textit{pass}/\textit{not pass}) function in Figs. \ref{fg_sieve_pass_notpass} and \ref{fg_double_sieving}, the sieving speed greatly differs for different sizes of particles. This is due to lower probability of a particle passing, if its parameters are near the edge of possible-passing function. 
-%For any finite sieving time, this obviously affects the statistics of particles passing the sieve, favoring the average size to be lower for short sieving times. The particles that are close to 
+It shall be noted that although we plotted a binary (pass/not pass) function in Figs. \ref{fg_sieve_pass_notpass} and \ref{fg_double_sieving}, the sieving speed continuously drops when the particle dimensions approaches those of the sieve holes. 
+%For any finite sieving time, this obviously affects the statistics of particles passing the sieve, favoring the average size to be lower for short sieving times.
 However, this particular fraction of particles is exactly what one is interested in during the high-accuracy sieving. The process must therefore run for long enough time, in the order of days, and with as high sieving speed as possible.
 %}}}
 \paragraph{First sieving apparatus}%{{{
@@ -161,7 +161,7 @@ The outer tube acted as an acoustic resonator, greatly enhancing the effect of t
 \paragraph{Sieving challenges}%{{{
 A practical deficiency of this setup was that the upper opening of the transducer radiated relatively intense sound during operation. We resolved this potential issue by covering whole apparatus by a robust glass bell jar.
 
-With the acoustic power and frequency correctly adjusted, the particles formed a cloud 5--10 mm high. One difficulty arose from that the small particles tend to attach to the surface of glass or metal, probably due to electrostatic charges on their surface. While at an average particle radius $\rho = 50$ $\upmu$m this effect was rather marginal and transient, it took only few seconds of sieving for $\rho = 20$ $\upmu$m particles to immobilize permanently on any surface. It has however proven efficient to tap the upper brass ring, as the vibration released most spheres, effectively renewing the sieving process. To ensure unattended sieving for a timespan in order of days, we added a little motorized hammer with a timing circuit. % todo add photo of the hammer
+With the acoustic power and frequency correctly adjusted, the particles formed a cloud 5--10 mm high. One difficulty arose from that the small particles tend to attach to the surface of glass or metal, probably due to electrostatic charges on their surface. While at an average particle radius $\rho = 50$ $\upmu$m this effect was rather marginal and transient, it took only few seconds of sieving for $\rho = 20$ $\upmu$m particles to immobilize permanently on any surface. It has however proven efficient to tap the upper brass ring, as the vibration released most spheres and renewed the sieving process. To ensure unattended sieving for a timespan in order of days, we added a little motorized hammer with a timing circuit. % todo add photo of the hammer
 
 The amount of particles in one batch was limited to ca. 10--20 mm$^{3}$, otherwise the sieve would be covered with a layer too thick, which could not be efficiently lifted by the acoustic pressure.
 It could however be slightly remedied by tilting the apparatus. With a tilt of 5--10 degrees, the bulk of particles then accumulated near one side, leaving most of the sieve surface free for sieving the moving fraction of particles. According to the small amount of particles required for the terahertz spectroscopy measurements, it is however advisable to sort a batch in order of 1--3 mm$^{3}$.
